--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/drawer": "5.12.5",
     "@react-navigation/native": "5.9.4",
     "@react-navigation/stack": "5.14.5",
+    "axios": "^1.3.2",
     "dayjs": "1.10.5",
     "expo": "45.0.0",
     "expo-app-loading": "2.0.0",
@@ -31,11 +32,13 @@
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
     "react-native-gesture-handler": "2.2.1",
+    "react-native-image-slider-box": "^2.0.7",
     "react-native-keyboard-aware-scroll-view": "0.9.4",
     "react-native-pager-view": "5.4.15",
     "react-native-reanimated": "2.8.0",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "3.11.1",
+    "react-native-snap-carousel": "^4.0.0-beta.6",
     "react-native-svg": "12.3.0",
     "react-native-web": "0.17.7"
   },
