--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "expo-modules-core": "0.9.2",
     "expo-status-bar": "1.3.0",
     "i18n-js": "3.8.0",
+    "moment": "^2.29.4",
     "native-base": "^3.4.25",
     "react": "17.0.2",
     "react-dom": "17.0.2",
