--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "expo-blur": "~12.2.2",
     "expo-constants": "~14.2.1",
     "expo-haptics": "~12.2.1",
+    "expo-image-picker": "~14.1.1",
     "expo-linear-gradient": "~12.1.1",
     "expo-localization": "~14.1.1",
     "expo-modules-core": "~1.2.4",
+    "expo-permissions": "^14.1.1",
     "expo-status-bar": "~1.4.4",
     "i18n-js": "3.8.0",
     "moment": "^2.29.4",
