--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.71.3",
+    "react-native-floating-action": "^1.22.0",
     "react-native-gesture-handler": "~2.9.0",
     "react-native-image-slider-box": "^2.0.7",
     "react-native-keyboard-aware-scroll-view": "0.9.4",
